# PX4-Autopilot

./: Kconfig  Makefile
ROMFS/px4fmu_common/init.d-posix/: rcS
Tools/: px_mkfw.py
Tools/baro_compensation/: README.md
Tools/simulation/swarm_ros2/: .gitignore  Dockerfile  build_docker.sh  package.xml  run_swarm.sh  setup.cfg  setup.py
Tools/simulation/swarm_ros2/launch/: swarm_launch.py
Tools/simulation/swarm_ros2/swarm_ros2/: swarm_controller.py  vision_provider.py
boards/hkust/nxt-v1/: default.px4board
boards/holybro/kakutef7/: default.px4board
boards/holybro/kakuteh7mini/: default.px4board
boards/holybro/kakuteh7v2/: default.px4board
boards/micoair/h743-aio/: default.px4board
boards/modalai/voxl2/: slpi.px4board
boards/nxp/mr-canhubk3/: fmu.px4board
boards/nxp/mr-tropic/: default.px4board
boards/px4/fmu-v6xrt/: default.px4board
boards/zeroone/x6/: default.px4board
docs/: package.json
docs/en/: SUMMARY.md  _sidebar.md
docs/en/advanced/: out_of_tree_modules.md  parameters_and_configurations.md  realsense_intel_driver.md
docs/en/advanced_config/: advanced_flight_controller_orientation_leveling.md  barometer_thrust_compensation.md  bootloader_update.md  bootloader_update_from_betaflight.md  bootloader_update_v6xrt.md  compass_power_compensation.md  esc_calibration.md  imu_factory_calibration.md  land_detector.md  parameter_reference.md  (+2 more)
msg/: CMakeLists.txt  FailsafeFlags.msg  GlobalPathSetpoint.msg  RtcmMovingBaseline.msg  SensorGps.msg
msg/versioned/: VehicleCommand.msg  VehicleStatus.msg
src/lib/: CMakeLists.txt
(+456 files in other folders)
