<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm_ros2</name>
  <version>0.1.0</version>
  <description>Swarm coordination for PX4 multi-vehicle simulation using px4-ros2-interface-lib concepts</description>
  <maintainer email="mrpollo@gmail.com">Ramon Roche</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
